--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,36 +1,25 @@
-name: Generate Pac-Man Contribution Graph
+name: Pac-Man eating contributions
 
 on:
-  schedule: # Runs once a day
-    - cron: "0 0 * * *"
-  workflow_dispatch: # Allows you to run it manually
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+  schedule:
+    - cron: "0 */6 * * *"   # Runs every 6 hours
+  workflow_dispatch:        # Allow manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Generate Snake Game
-        uses: Platane/snk@v3
+      - uses: Platane/snk@v3
         with:
           github_user_name: kiran-8287
           outputs: |
-            dist/pacman-contribution-graph.svg
-            dist/pacman-contribution-graph-dark.svg?palette=github-dark
+            dist/pacman.svg?palette=github-dark
+            dist/pacman.svg?palette=github-light
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/main'
+      - name: Push to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: output
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
