--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 */6 * * *"   # Runs every 6 hours
   workflow_dispatch:        # Allow manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
